--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <img src="basile/LOGO BASILE.jpg" alt="Logo Basile" class="header-logo">
+                <img src="../basile/LOGO BASILE.jpg" alt="Logo Basile" class="header-logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
