cambios en el footer

--- a/productos.html
+++ b/productos.html
@@ -171,7 +171,7 @@
                 </div>
 
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-upperclase mb-4 font-weight-bold text-secondary">Contacto</h5>
+                    <h5 class="text-upperclase mb-4 font-weight-bold text-secondary">CONTACTO</h5>
                     <p>
                         <i class="fas fa-location-dot mr-3"></i>Ramos Mejía, Buenos Aires.
                     </p>
