--- a/index.html
+++ b/index.html
@@ -79,49 +79,6 @@
 
 
 
-
-    <!--<footer>
-        <section class="section-footer">
-            <div class="div-footer">
-                <div>
-                    <ul class="ul-footer">
-                        <li>Preguntas frecuentes</li>
-                        <li>Terminos y condiciones</li>
-                        <li>Aviso de privacidad</li>
-                    </ul>
-                </div>
-
-                <div class="footer">
-                    <i class="fa-sharp fa-solid fa-location-dot"></i>
-                    <ul class="ul-footer">
-                        <li>Ramos Mejia, Buenos Aires</li>
-                    </ul>
-                </div>
-
-                <div class="footer">
-                    <i class="fa-brands fa-facebook-f"></i>
-                    <ul class="ul-footer">
-                        <li>Basile Bs. As.</li>
-                    </ul>
-                </div>
-
-                <div class="footer">
-                    <i class="fa-brands fa-instagram"></i>
-                    <ul class="ul-footer">
-                        <li>Somosbasile</li>
-                    </ul>
-                </div>
-
-                <div class="footer">
-                    <i class="fa-solid fa-phone"></i>
-                    <ul class="ul-footer">
-                        <li>+5491134715324</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-    </footer>-->
-
     <footer class="bg-dark text-white pt-5 pb-4">
         <div class="container text-center text-md-left">
             <div class="row text-center text-md-left">
@@ -157,7 +114,7 @@
                 </div>
 
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-upperclase mb-4 font-weight-bold text-secondary">Contacto</h5>
+                    <h5 class="text-upperclase mb-4 font-weight-bold text-secondary">CONTACTO</h5>
                     <p>
                         <i class="fas fa-location-dot mr-3"></i>Ramos Mejía, Buenos Aires.
                     </p>
