--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <img src="basile/LOGO BASILE.jpg" alt="Logo Basile" class="header-logo">
+                <img src="https://i.imgur.com/Tp1MR86.jpg" alt="Logo Basile" class="header-logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -54,7 +54,7 @@
     </header>
 
     <div class="div-banner">
-        <img src="basile/foto banner 2.png" alt="Foto de producto" class="img-banner">
+        <img src="https://i.imgur.com/6wcWiIc.png" alt="Foto de producto" class="img-banner">
         <p class="p-banner" data-aos="fade-up" data-aos-duration="3000">Bienvenidos a Basile</p>
     </div>
 
