añadi imagenes desde imgur

--- a/productos.html
+++ b/productos.html
@@ -30,7 +30,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-white">
             <div class="container-fluid">
-                <img src="basile/LOGO BASILE.jpg" alt="Logo Basile" class="header-logo">
+                <img src="https://i.imgur.com/Tp1MR86.jpg" alt="Logo Basile" class="header-logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -62,17 +62,17 @@
     <div class="div-productos" data-aos="zoom-in-up">
         <h3 class="productos">Maceteros</h3>
         <div class="contenedor-prod  li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/_MG_9566.jpg" alt="foto macetero pequeño" class="img-prod">
+            <img src="https://imgur.com/yiGhDfS" alt="foto macetero pequeño" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow chico</p>
             <p class="p-desc-prod">Macetero 20x20cm + Maceta de regalo</p>
         </div>
         <div class="contenedor-prod  li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/_MG_9572.jpg" alt="foto macetero mediano" class="img-prod">
+            <img src="https://imgur.com/yysiWGG" alt="foto macetero mediano" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow Mediano</p>
             <p class="p-desc-prod">Macetero 40x20cm + Maceta de regalo</p>
         </div>
         <div class="contenedor-prod  li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/_MG_9574.jpg" alt="foto macetero grande" class="img-prod">
+            <img src="https://imgur.com/aA8qsGR" alt="foto macetero grande" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow Grande</p>
             <p class="p-desc-prod">Macetero 60x20cm + Maceta de regalo</p>
         </div>
@@ -81,17 +81,17 @@
     <div class="div-productos">
         <h3 class="productos" data-aos="zoom-in-up">Deco para baños</h3>
         <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/_MG_0265.jpg" alt="foto alfombra" class="img-prod">
+            <img src="https://imgur.com/1m5PkZV" alt="foto alfombra" class="img-prod">
             <p class="p-titulo-prod">Alfombra/deck</p>
             <p class="p-desc-prod">Alfombra/deck 30x50</p>
         </div>
         <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/_MG_0269.jpg" alt="foto jabonera" class="img-prod">
+            <img src="https://imgur.com/NNc19nH" alt="foto jabonera" class="img-prod">
             <p class="p-titulo-prod">Jabonera</p>
             <p class="p-desc-prod">Jabonera 8x12</p>
         </div>
         <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/CRUCE DE BAÑERA 1.png" alt="foto cruce de bañera" class="img-prod">
+            <img src="https://imgur.com/RAjsNBq" alt="foto cruce de bañera" class="img-prod">
             <p class="p-titulo-prod">Cruce de bañera</p>
             <p class="p-desc-prod">Cruce de bañera 60cm a 75cm</p>
         </div>
@@ -100,15 +100,15 @@
     <div class="div-productos">
         <h3 class="productos" data-aos="zoom-in-up">Estantes flotantes</h3>
         <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/_MG_9545.jpg" alt="foto estante 20cm" class="img-prod">
+            <img src="https://imgur.com/g40MidL" alt="foto estante 20cm" class="img-prod">
             <p class="p-titulo-prod">Estante flotante 20cm</p>
         </div>
         <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/_MG_9549.jpg" alt="foto estante 25cm" class="img-prod">
+            <img src="https://imgur.com/2OlWjBV" alt="foto estante 25cm" class="img-prod">
             <p class="p-titulo-prod">Estante flotante 25cm</p>
         </div>
         <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/_MG_9550.jpg" alt="foto estante 30cm" class="img-prod">
+            <img src="https://imgur.com/bjpnA5W" alt="foto estante 30cm" class="img-prod">
             <p class="p-titulo-prod">Estante flotante 30cm</p>
         </div>
     </div>
@@ -116,19 +116,19 @@
     <div class="div-productos">
         <h3 class="productos" data-aos="zoom-in-up">Promociones</h3>
         <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/tres (1).jpg" alt="foto set de maceteros" class="img-prod">
+            <img src="https://imgur.com/dh1Shof" alt="foto set de maceteros" class="img-prod">
             <p class="p-titulo-prod">Set Maceteros Snow x3</p>
             <p class="p-desc-prod">Macetero chico + Maceta</p>
             <p class="p-desc-prod">Macetero Mediano + Maceta</p>
             <p class="p-desc-prod">Macetero Grande + Maceta</p>
         </div>
         <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/foto deck 500x400.png" alt="foto alfombra deck" class="img-prod">
+            <img src="https://imgur.com/9MSj4yH" alt="foto alfombra deck" class="img-prod">
             <p class="p-titulo-prod">Set Alfombra/deck + Jabonera</p>
             <p class="p-desc-prod">Alfombra/deck 30x50 + Jabonera 8x12</p>
         </div>
         <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/_MG_9545.jpg" alt="Imagen estante flotante" class="img-prod">
+            <img src="https://imgur.com/2OlWjBV" alt="Imagen estante flotante" class="img-prod">
             <p class="p-titulo-prod">Set Estantes Flotantes</p>
             <p class="p-desc-prod">Estante flotante 25x60x3,5</p>
             <p class="p-desc-prod">Estante flotante 25x80x3,5</p>
