añadi imagenes desde imgur

--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
     <div class="div-card-index">
         <div class="card" data-aos="zoom-in-up">
             <p class="titulo-card">Responsablidad y compromiso asegurado</p>
-            <img src="https://imgur.com/PbkH4eT" alt="clientes" class="img-card">
+            <img src="https://i.imgur.com/JKQVKug.png" alt="clientes" class="img-card">
             <p class="p-card">Nuestro principal objetivo es brindar el mejor servicio a los clientes</p>
         </div>
         <div class="card" data-aos="zoom-in-up">
             <p class="titulo-card">Envíos a todo el país</p>
-            <img src="https://imgur.com/w0beYdd" alt="Envios" class="img-card">
+            <img src="https://i.imgur.com/w0beYdd.png" alt="Envios" class="img-card">
             <p class="p-card">Realizamos los envíos por correo argentino</p>
         </div>
         <div class="card" data-aos="zoom-in-up">
             <p class="titulo-card">Sitio seguro</p>
-            <img src="https://imgur.com/ZYMWmPv" alt="seguridad" class="img-card">
+            <img src="https://i.imgur.com/ZYMWmPv.png" alt="seguridad" class="img-card">
             <p class="p-card">Protegemos tus datos</p>
         </div>
     </div>
