sigo probando imagenes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <img src="https://i.imgur.com/Tp1MR86.jpg" alt="Logo Basile" class="header-logo">
+                <img src="basile/logobasile.jpg" alt="Logo Basile" class="header-logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -39,7 +39,7 @@
                             <a class="nav-link" href="nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item li-padding li-hover li-trans">
-                            <a class="nav-link" href="productos.html">Producto</a>
+                            <a class="nav-link" href="productos.html">Productos</a>
                         </li>
                         <li class="nav-item li-padding li-hover li-trans">
                             <a class="nav-link" href="contacto.html">Contacto</a>
@@ -62,17 +62,17 @@
     <div class="div-card-index">
         <div class="card" data-aos="zoom-in-up">
             <p class="titulo-card">Responsablidad y compromiso asegurado</p>
-            <img src="https://i.imgur.com/JKQVKug.png" alt="clientes" class="img-card">
+            <img src="basile/cardclientes.png" alt="clientes" class="img-card">
             <p class="p-card">Nuestro principal objetivo es brindar el mejor servicio a los clientes</p>
         </div>
         <div class="card" data-aos="zoom-in-up">
             <p class="titulo-card">Envíos a todo el país</p>
-            <img src="https://i.imgur.com/w0beYdd.png" alt="Envios" class="img-card">
+            <img src="basile/cardenvios.png" alt="Envios" class="img-card">
             <p class="p-card">Realizamos los envíos por correo argentino</p>
         </div>
         <div class="card" data-aos="zoom-in-up">
             <p class="titulo-card">Sitio seguro</p>
-            <img src="https://i.imgur.com/ZYMWmPv.png" alt="seguridad" class="img-card">
+            <img src="basile/cardseguridad.png" alt="seguridad" class="img-card">
             <p class="p-card">Protegemos tus datos</p>
         </div>
     </div>
