--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-white">
             <div class="container-fluid">
-                <img src="basile/LOGO BASILE.jpg" alt="Logo Basile" class="header-logo">
+                <img src="basile/logobasile.jpg" alt="Logo Basile" class="header-logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -38,7 +38,7 @@
                             <a class="nav-link" href="nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item li-padding li-hover li-trans">
-                            <a class="nav-link" href="productos.html">Producto</a>
+                            <a class="nav-link" href="productos.html">Productos</a>
                         </li>
                         <li class="nav-item li-padding li-hover li-trans">
                             <a class="nav-link" href="contacto.html">Contacto</a>
