sigo probando imagenes

--- a/productos.html
+++ b/productos.html
@@ -81,7 +81,7 @@
     <div class="div-productos">
         <h3 class="productos" data-aos="zoom-in-up">Deco para baños</h3>
         <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
-            <img src="basile/alfombra.jpg" alt="foto alfombra" class="img-prod">
+            <img src="./basile/alfombra.jpg" alt="foto alfombra" class="img-prod">
             <p class="p-titulo-prod">Alfombra/deck</p>
             <p class="p-desc-prod">Alfombra/deck 30x50</p>
         </div>
