--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 
 
-    <footer class="bg-dark text-white pt-5 pb-4">
+    <footer class="bg-dark text-white pt-5 pb-4 mt-5">
         <div class="container text-center text-md-left">
             <div class="row text-center text-md-left">
                 <div class="col-md-3 col-lg-3 col-xl-2 mx-auto mt-3">
