--- a/productos.html
+++ b/productos.html
@@ -81,7 +81,7 @@
     <div class="div-productos">
         <h3 class="productos" data-aos="zoom-in-up">Deco para baños</h3>
         <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
-            <img src="/basile/alfombra.jpg" alt="foto alfombra" class="img-prod">
+            <img src="../basile/alfombra.jpg" alt="foto alfombra" class="img-prod">
             <p class="p-titulo-prod">Alfombra/deck</p>
             <p class="p-desc-prod">Alfombra/deck 30x50</p>
         </div>
@@ -136,7 +136,7 @@
         </div>
     </div>
 
-    <footer class="bg-dark text-white pt-5 pb-4">
+    <footer class="bg-dark text-white pt-5 pb-4 mt-5">
         <div class="container text-center text-md-left">
             <div class="row text-center text-md-left">
                 <div class="col-md-3 col-lg-3 col-xl-2 mx-auto mt-3">
