--- a/productos.html
+++ b/productos.html
@@ -59,19 +59,19 @@
     </header>
    
 
-    <div class="div-productos" data-aos="zoom-in-up">
+    <div class="div-productos">
         <h3 class="productos">Maceteros</h3>
-        <div class="contenedor-prod  li-hover li-trans" data-aos="zoom-in-up">
+        <div class="contenedor-prod  li-hover li-trans">
             <img src="basile/maceterochico.jpg" alt="foto macetero pequeño" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow chico</p>
             <p class="p-desc-prod">Macetero 20x20cm + Maceta de regalo</p>
         </div>
-        <div class="contenedor-prod  li-hover li-trans" data-aos="zoom-in-up">
+        <div class="contenedor-prod  li-hover li-trans">
             <img src="basile/maceteromediano.jpg" alt="foto macetero mediano" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow Mediano</p>
             <p class="p-desc-prod">Macetero 40x20cm + Maceta de regalo</p>
         </div>
-        <div class="contenedor-prod  li-hover li-trans" data-aos="zoom-in-up">
+        <div class="contenedor-prod  li-hover li-trans">
             <img src="basile/maceteromediano.jpg" alt="foto macetero grande" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow Grande</p>
             <p class="p-desc-prod">Macetero 60x20cm + Maceta de regalo</p>
@@ -79,18 +79,18 @@
     </div>
 
     <div class="div-productos">
-        <h3 class="productos" data-aos="zoom-in-up">Deco para baños</h3>
-        <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
+        <h3 class="productos">Deco para baños</h3>
+        <div class="contenedor-prod li-hover li-trans">
             <img src="../basile/alfombra.jpg" alt="foto alfombra" class="img-prod">
             <p class="p-titulo-prod">Alfombra/deck</p>
             <p class="p-desc-prod">Alfombra/deck 30x50</p>
         </div>
-        <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
+        <div class="contenedor-prod li-hover li-trans">
             <img src="basile/jabonera.jpg" alt="foto jabonera" class="img-prod">
             <p class="p-titulo-prod">Jabonera</p>
             <p class="p-desc-prod">Jabonera 8x12</p>
         </div>
-        <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
+        <div class="contenedor-prod li-hover li-trans">
             <img src="basile/crucedebañera.png" alt="foto cruce de bañera" class="img-prod">
             <p class="p-titulo-prod">Cruce de bañera</p>
             <p class="p-desc-prod">Cruce de bañera 60cm a 75cm</p>
@@ -98,36 +98,36 @@
     </div>
 
     <div class="div-productos">
-        <h3 class="productos" data-aos="zoom-in-up">Estantes flotantes</h3>
-        <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
+        <h3 class="productos">Estantes flotantes</h3>
+        <div class="contenedor-prod li-hover li-trans">
             <img src="basile/estantechico.jpg" alt="foto estante 20cm" class="img-prod">
             <p class="p-titulo-prod">Estante flotante 20cm</p>
         </div>
-        <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
+        <div class="contenedor-prod li-hover li-trans">
             <img src="basile/estantemediano.jpg" alt="foto estante 25cm" class="img-prod">
             <p class="p-titulo-prod">Estante flotante 25cm</p>
         </div>
-        <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
+        <div class="contenedor-prod li-hover li-trans">
             <img src="basile/estantegrande.jpg" alt="foto estante 30cm" class="img-prod">
             <p class="p-titulo-prod">Estante flotante 30cm</p>
         </div>
     </div>
 
     <div class="div-productos">
-        <h3 class="productos" data-aos="zoom-in-up">Promociones</h3>
-        <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
+        <h3 class="productos">Promociones</h3>
+        <div class="contenedor-prod li-hover li-trans">
             <img src="basile/tresmaceteros.jpg" alt="foto set de maceteros" class="img-prod">
             <p class="p-titulo-prod">Set Maceteros Snow x3</p>
             <p class="p-desc-prod">Macetero chico + Maceta</p>
             <p class="p-desc-prod">Macetero Mediano + Maceta</p>
             <p class="p-desc-prod">Macetero Grande + Maceta</p>
         </div>
-        <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
+        <div class="contenedor-prod li-hover li-trans" >
             <img src="basile/setproductos.jpg" alt="foto alfombra deck" class="img-prod">
             <p class="p-titulo-prod">Set Alfombra/deck + Jabonera</p>
             <p class="p-desc-prod">Alfombra/deck 30x50 + Jabonera 8x12</p>
         </div>
-        <div class="contenedor-prod li-hover li-trans" data-aos="zoom-in-up">
+        <div class="contenedor-prod li-hover li-trans">
             <img src="basile/estantechico.jpg" alt="Imagen estante flotante" class="img-prod">
             <p class="p-titulo-prod">Set Estantes Flotantes</p>
             <p class="p-desc-prod">Estante flotante 25x60x3,5</p>
