--- a/carrito.html
+++ b/carrito.html
@@ -49,18 +49,64 @@
     </header>
 
     <h3 class="productos">Tus productos</h3>
-    <main class="main-enc-carrito">
-        <div class="carrito div-productos">Productos</div>
-        <div class="carrito div-cantidad">Cantidad</div>
-        <div class="carrito div-sub ">Subtotal</div>
+    <main class="container">
+        <div class="row">
+            <div class="col-6 mx-auto mt-3 text-black text-center">
+                <h6>Productos</h6>
+            </div>
+            <div class="col-3 mx-auto mt-3 text-black text-center">
+                <h6>Cantidad</h6>
+            </div>
+            <div class="col-3 mx-auto mt-3 text-black text-center">
+                <h6>Subtotal</h6>
+            </div>
+        </div>
     </main>
 
-    <main class="main-primer-producto">
-        <img src="basile/tres (1).jpg" alt="Imagen set de maceteros" class="carrito img-set">
+    <main class="container">
+        <div class="row">
+            <div class="col-3 mx-auto mt-3 text-black text-center">
+                <img src="basile/tresmaceteros.jpg" alt="set de maceteros" width="100" class="img-fluid">
+            </div>
+            <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
+                <small>Set de maceteros x3</small>
+            </div>
+            <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
+                <input type="number" value="1">
+            </div><div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
+                <small>$4900</small>
+            </div>
+            <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
+                <img src="basile/alfombra.jpg" alt="alfombra" width="100">
+            </div><div class="col-3 mx-auto mt-3 text-black text-center">
+                <small>Alfombra/deck</small>
+            </div>
+            <div class="col-3 mx-auto mt-3 text-black text-center">
+                <input type="number" value="1">
+            </div>
+            <div class="col-3 mx-auto mt-3 text-black text-center">
+                <small>$3800</small>
+            </div>
+            <div class="col-6 mx-auto mt-3 text-black text-center">
+                <h6>Subtotal</h6>
+            </div>
+            <div class="col-6 mx-auto mt-3 text-black text-center">
+                <h6>Subtotal</h6>
+            </div>
+            <div class="col-6 mx-auto mt-3 text-black text-center">
+                <h6>Subtotal</h6>
+            </div>
+        </div>
+    </main>
+
+
+
+   <!-- <main class="main-primer-producto">
+        <img src="basile/tresmaceteros.jpg" alt="Imagen set de maceteros" class="carrito img-set">
         <div class="carrito div-set-maceteros"> Set de maceteros x3</div>
         <div class="carrito div-cant-set">1</div>
         <div class="carrito div-precio-set">$4900</div>
-        <img src="basile/_MG_0265.jpg" alt="Imagen alfombra" class="carrito img-c-alfombra">
+        <img src="basile/alfombra.jpg" alt="Imagen alfombra" class="carrito img-c-alfombra">
         <div class="carrito div-c-alf">Alfombra deck para baño</div>
         <div class="carrito div-cant-alf">2</div>
         <div class="carrito div-prec-alf">$2900</div>
@@ -73,7 +119,7 @@
         <div class="carrito div-subtotal">Subtotal</div>
         <div class="carrito sub-precio">$7800</div>
         <div class="carrito continuar">Continuar</div>
-    </main>
+    </main>-->
 
     <footer class="bg-dark text-white pt-5 pb-4 mt-5">
         <div class="container text-center text-md-left">
