--- a/productos.html
+++ b/productos.html
@@ -62,7 +62,7 @@
     <div class="div-productos">
         <h3 class="productos">Maceteros</h3>
         <div class="contenedor-prod  li-hover li-trans">
-            <img src="../../Mer/index.html/basile/estantechico.jpg" alt="foto macetero pequeño" class="img-prod">
+            <img src="basile/maceterochico.jpg" alt="foto macetero pequeño" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow chico</p>
             <p class="p-desc-prod">Macetero 20x20cm + Maceta de regalo</p>
         </div>
