--- a/carrito.html
+++ b/carrito.html
@@ -72,54 +72,43 @@
                 <small>Set de maceteros x3</small>
             </div>
             <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
-                <input type="number" value="1">
+                <small>1</small>
             </div><div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
                 <small>$4900</small>
             </div>
             <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
                 <img src="basile/alfombra.jpg" alt="alfombra" width="100">
-            </div><div class="col-3 mx-auto mt-3 text-black text-center">
+            </div><div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
                 <small>Alfombra/deck</small>
             </div>
-            <div class="col-3 mx-auto mt-3 text-black text-center">
-                <input type="number" value="1">
+            <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
+                <small>1</small>
             </div>
-            <div class="col-3 mx-auto mt-3 text-black text-center">
+            <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
                 <small>$3800</small>
             </div>
-            <div class="col-6 mx-auto mt-3 text-black text-center">
-                <h6>Subtotal</h6>
+            <div class="col-6 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
+                <small>Envio</small>
             </div>
-            <div class="col-6 mx-auto mt-3 text-black text-center">
-                <h6>Subtotal</h6>
+            <div class="col-3 mx-auto mt-3 py-3 text-black d-flex align-items-center justify-content-center calcular">
+                <button type="button" class="btn btn-dark">Calcular</button>
             </div>
-            <div class="col-6 mx-auto mt-3 text-black text-center">
-                <h6>Subtotal</h6>
+            <div class="col-3 mx-auto mt-3 py-3 text-black d-flex align-items-center justify-content-center calcular">
+                <small>$0.00 ARS</small>
             </div>
+            <div class="col-6 mx-auto mt-3 text-black d-flex align-items-center justify-content-center espacio-en-blanco">
+                <small>espacioenblanco</small>
+            </div>
+            <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
+                <small>Total</small>
+            </div>
+            <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
+                <small>$8700 ARS</small>
+            </div>
+
         </div>
     </main>
 
-
-
-   <!-- <main class="main-primer-producto">
-        <img src="basile/tresmaceteros.jpg" alt="Imagen set de maceteros" class="carrito img-set">
-        <div class="carrito div-set-maceteros"> Set de maceteros x3</div>
-        <div class="carrito div-cant-set">1</div>
-        <div class="carrito div-precio-set">$4900</div>
-        <img src="basile/alfombra.jpg" alt="Imagen alfombra" class="carrito img-c-alfombra">
-        <div class="carrito div-c-alf">Alfombra deck para baño</div>
-        <div class="carrito div-cant-alf">2</div>
-        <div class="carrito div-prec-alf">$2900</div>
-        <div class="carrito div-envio">Envio</div>
-        <div class="carrito div-calcular">Calcular</div>
-        <div class="carrito div-precio-final">$0.00 ARS</div>
-    </main>
-
-    <main class="main-precio-final">
-        <div class="carrito div-subtotal">Subtotal</div>
-        <div class="carrito sub-precio">$7800</div>
-        <div class="carrito continuar">Continuar</div>
-    </main>-->
 
     <footer class="bg-dark text-white pt-5 pb-4 mt-5">
         <div class="container text-center text-md-left">
@@ -172,6 +161,7 @@
                 </div>
             </div>
     </footer>
+
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
