--- a/contacto.html
+++ b/contacto.html
@@ -80,7 +80,7 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <div class="col-md-12 boton-enviar">
-                <button type="button" class="btn btn-light">
+                <button type="button" class="btn btn-dark">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                         class="bi bi-send-fill" viewBox="0 0 16 16">
                         <path
