--- a/nosotros.html
+++ b/nosotros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="BASILE/LOGO BASILE FAVICON.png" type="image/x-icon">
+    <link rel="shortcut icon" href="basile/logobasilefavicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/feb0aa9a7d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -56,7 +56,7 @@
     <main class="container">
         <div class="row">
             <div class="col-lg-5 px-3">
-                <img src="basile/foto macetero.png" alt="Foto de producto" class="img-fluid" width="600" height="400">
+                <img src="basile/fotomacetero.png" alt="Foto de producto" class="img-fluid" width="600" height="400">
             </div>
             <div class="col-lg-7 px-3 text-secondary">
                 <p class="lead"> Somos un grupo de personas que, apasionadxs por los productos
