--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="BASILE/LOGO BASILE FAVICON.png" type="image/x-icon">
+    <link rel="shortcut icon" href="BASILE/logobasilefavicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/feb0aa9a7d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
