--- a/productos.html
+++ b/productos.html
@@ -61,17 +61,28 @@
 
     <div class="div-productos">
         <h3 class="productos">Maceteros</h3>
-        <div class="contenedor-prod  li-hover li-trans">
+        <div class="contenedor-prod">
             <img src="basile/maceterochico.jpg" alt="foto macetero pequeño" class="img-prod">
-            <p class="p-titulo-prod">Macetero Snow chico</p>
-            <p class="p-desc-prod">Macetero 20x20cm + Maceta de regalo</p>
+            <p class="p-titulo-prod">Macetero Snow Chico</p>
+            <div class="precio-carrito">
+                <h5>$2500</h5>
+                <a href="#" class="carrito">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-cart-plus" viewBox="0 0 16 16">
+                        <path
+                            d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                        <path
+                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
         </div>
-        <div class="contenedor-prod  li-hover li-trans">
+        <div class="contenedor-prod">
             <img src="basile/maceteromediano.jpg" alt="foto macetero mediano" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow Mediano</p>
             <p class="p-desc-prod">Macetero 40x20cm + Maceta de regalo</p>
         </div>
-        <div class="contenedor-prod  li-hover li-trans">
+        <div class="contenedor-prod">
             <img src="basile/maceteromediano.jpg" alt="foto macetero grande" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow Grande</p>
             <p class="p-desc-prod">Macetero 60x20cm + Maceta de regalo</p>
@@ -122,7 +133,7 @@
             <p class="p-desc-prod">Macetero Mediano + Maceta</p>
             <p class="p-desc-prod">Macetero Grande + Maceta</p>
         </div>
-        <div class="contenedor-prod li-hover li-trans" >
+        <div class="contenedor-prod li-hover li-trans">
             <img src="basile/setproductos.jpg" alt="foto alfombra deck" class="img-prod">
             <p class="p-titulo-prod">Set Alfombra/deck + Jabonera</p>
             <p class="p-desc-prod">Alfombra/deck 30x50 + Jabonera 8x12</p>
@@ -136,54 +147,62 @@
         </div>
     </div>
 
-    <footer class="bg-dark text-white pt-5 pb-4 mt-5">
-        <div class="container text-center text-md-left">
-            <div class="row text-center text-md-left">
+    <footer class="pt-5 pb-4 mt-5">
+        <div class="footer container text-md-left">
+            <div class="div-footer row text-md-left">
                 <div class="col-md-3 col-lg-3 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-secondary">Secciones</h5>
-                    <p>
-                        <a href="index.html" class="text-white" style="text-decoration:none;">Inicio</a>
-                    </p>
-                    <p>
-                        <a href="nosotros.html" class="text-white" style="text-decoration:none;">Nosotros</a>
-                    </p>
-                    <p>
-                        <a href="productos.html" class="text-white" style="text-decoration:none;">Productos</a>
-                    </p>
-                    <p>
-                        <a href="contacto.html" class="text-white" style="text-decoration:none;">Contacto</a>
-                    </p>
-                    <p>
-                        <a href="carrito.html" class="text-white" style="text-decoration:none;">Carrito</a>
-                    </p>
+                    <h5 class="titulo-footer mb-4">Secciones</h5>
+                    <h6 class="margin-footer">
+                        <a href="index.html" class="text-footer">Inicio</a>
+                    </h6>
+                    <h6 class="margin-footer">
+                        <a href="nosotros.html" class="text-footer">Nosotros</a>
+                    </h6>
+                    <h6 class="margin-footer">
+                        <a href="productos.html" class="text-footer">Productos</a>
+                    </h6>
+                    <h6 class="margin-footer">
+                        <a href="contacto.html" class="text-footer">Contacto</a>
+                    </h6>
+                    <h6 class="margin-footer">
+                        <a href="carrito.html" class="text-footer">Carrito</a>
+                    </h6>
                 </div>
                 <div class="col-md-2 col-lg-2 col-xl-2 mg-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold text-secondary">Otros</h5>
-                    <p>
-                        <a href="#" class="text-white" style="text-decoration:none;">Preguntas frecuentes</a>
-                    </p>
-                    <p>
-                        <a href="#" class="text-white" style="text-decoration:none;">Terminos y condiciones</a>
-                    </p>
-                    <p>
-                        <a href="#" class="text-white" style="text-decoration:none;">Aviso de privacidad</a>
-                    </p>
+                    <h5 class="titulo-footer mb-4">Otros</h5>
+                    <h6 class="margin-footer">
+                        <a href="#" class="text-footer">Preguntas frecuentes</a>
+                    </h6>
+                    <h6 class="margin-footer">
+                        <a href="#" class="text-footer">Terminos y condiciones</a>
+                    </h6>
+                    <h6 class="margin-footer">
+                        <a href="#" class="text-footer">Aviso de privacidad</a>
+                    </h6>
                 </div>
 
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-upperclase mb-4 font-weight-bold text-secondary">CONTACTO</h5>
-                    <p>
-                        <i class="fas fa-location-dot mr-3"></i>Ramos Mejía, Buenos Aires.
-                    </p>
-                    <p>
-                        <i class="fas fa-brands fa-facebook-f mr-3"></i>Basile Bs.As
-                    </p>
-                    <p>
-                        <i class="fas fa-brands fa-instagram mr-3"></i>SomosBasile
-                    </p>
-                    <p>
-                        <i class="fas fa-phone mr-3"></i>+5491134715324
-                    </p>
+                    <h5 class="titulo-footer mb-4">Contacto</h5>
+                    <h6 class="margin-footer">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z" />
+                        </svg>Ramos Mejía, Buenos Aires.
+                    </h6>
+                    <h6 class="margin-footer">
+                        <i class="fas fa-brands fa-facebook-f"></i>Basile Bs.As
+                    </h6>
+                    <h6 class="margin-footer">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                            class="bi bi-instagram" viewBox="0 0 16 16">
+                            <path
+                                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z" />
+                        </svg></i>SomosBasile
+                    </h6>
+                    <h6 class="margin-footer">
+                        <i class="fas fa-phone"></i>+5491134715324
+                    </h6>
                 </div>
             </div>
     </footer>
