mas sass con listas y estilos generales

--- a/nosotros.html
+++ b/nosotros.html
@@ -24,7 +24,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <img src="BASILE/logobasile.jpg" alt="Logo Basile" class="header-logo">
+                <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile" class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -54,8 +54,8 @@
 
 
     <h1 class="titulo">Quienes somos</h1>
-    <main class="container">
-        <div class="row">
+    <main class="container main-nosotros">
+        <div class="row div-nosotros">
             <div class="col-lg-5 px-3">
                 <img src="BASILE/fotomacetero.png" alt="Foto de producto" class="img-fluid" width="600" height="400">
             </div>
@@ -78,8 +78,8 @@
         </div>
     </main>
     <h1 class="titulo">Nuestro taller</h1>
-    <main class="container">
-        <div class="row">
+    <main class="container main-nosotros">
+        <div class="row div-nosotros">
             <div class="col-lg-6 px-3 text-secondary">
                 <h2 class="lead">Nuestro taller está ubicado en Ramos Mejía, Partido de La Matanza,
                     lugar que nos ha visto crecer a muchos de nosotros y que hoy
