--- a/carrito.html
+++ b/carrito.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <img src="./basile/logobasile.jpg" alt="Logo Basile" class="header-logo">
+                <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile" class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -49,9 +49,9 @@
     </header>
 
 
-    <h3 class="productos">Tus productos</h3>
+    <h1>Tus productos</h1>
     <main class="container">
-        <div class="row">
+        <div class="row contenedor-principal">
             <div class="col-6 mx-auto mt-3 text-black text-center">
                 <h6>Productos</h6>
             </div>
@@ -64,10 +64,10 @@
         </div>
     </main>
 
-    <main class="container">
-        <div class="row">
+    <main class="container main-carrito">
+        <div class="row div-carrito contenedor-principal">
             <div class="col-3 mx-auto mt-3 text-black text-center">
-                <img src="basile/tresmaceteros.jpg" alt="set de maceteros" width="100" class="img-fluid">
+                <img src="BASILE/tresmaceteros.jpg" alt="set de maceteros" width="100" class="img-fluid">
             </div>
             <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
                 <small>Set de maceteros x3</small>
@@ -78,7 +78,7 @@
                 <small>$4900</small>
             </div>
             <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
-                <img src="basile/alfombra.jpg" alt="alfombra" width="100">
+                <img src="BASILE/alfombra.jpg" alt="alfombra" width="100">
             </div><div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
                 <small>Alfombra/deck</small>
             </div>
@@ -92,7 +92,7 @@
                 <small>Envio</small>
             </div>
             <div class="col-3 mx-auto mt-3 py-3 text-black d-flex align-items-center justify-content-center calcular">
-                <button type="button" class="btn btn-dark">Calcular</button>
+                <button type="button" class="btn btn-outline-secondary">Calcular</button>
             </div>
             <div class="col-3 mx-auto mt-3 py-3 text-black d-flex align-items-center justify-content-center calcular">
                 <small>$0.00 ARS</small>
@@ -100,10 +100,10 @@
             <div class="col-6 mx-auto mt-3 text-black d-flex align-items-center justify-content-center espacio-en-blanco">
                 <small>espacioenblanco</small>
             </div>
-            <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
-                <small>Total</small>
+            <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center total">
+                <small>Total</small> 
             </div>
-            <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center">
+            <div class="col-3 mx-auto mt-3 text-black d-flex align-items-center justify-content-center precio">
                 <small>$8700 ARS</small>
             </div>
 
