--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Basile</title>
 </head>
@@ -25,7 +28,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <img src="BASILE/logobasile.jpg" alt="Logo Basile" class="header-logo">
+                <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile" class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -67,8 +70,10 @@
         </div>
     </main>
 
+
     <main class="main-cards">
         <div class="div-card-index">
+            <h1>Basile Wood & Deco</h1>
             <div class="card" data-aos="zoom-in-up">
                 <h2 class="titulo-card">Responsablidad y compromiso asegurado</h2>
                 <img src="BASILE/cardclientes.png" alt="clientes" class="img-card">
