--- a/productos.html
+++ b/productos.html
@@ -30,7 +30,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <img src="./basile/logobasile.jpg" alt="Logo Basile" class="header-logo">
+                <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile" class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -60,9 +60,9 @@
 
 
     <div class="div-productos">
-        <h3 class="productos">Maceteros</h3>
+        <h1>Maceteros</h1>
         <div class="contenedor-prod">
-            <img src="basile/maceterochico.jpg" alt="foto macetero pequeño" class="img-prod">
+            <img src="BASILE/maceterochico.jpg" alt="foto macetero pequeño" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow Chico</p>
             <div class="precio-carrito">
                 <h5>$2500</h5>
@@ -78,74 +78,201 @@
             </div>
         </div>
         <div class="contenedor-prod">
-            <img src="basile/maceteromediano.jpg" alt="foto macetero mediano" class="img-prod">
+            <img src="BASILE/maceteromediano.jpg" alt="foto macetero mediano" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow Mediano</p>
-            <p class="p-desc-prod">Macetero 40x20cm + Maceta de regalo</p>
+            <div class="precio-carrito">
+                <h5>$3000</h5>
+                <a href="#" class="carrito">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-cart-plus" viewBox="0 0 16 16">
+                        <path
+                            d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                        <path
+                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
         </div>
         <div class="contenedor-prod">
-            <img src="basile/maceteromediano.jpg" alt="foto macetero grande" class="img-prod">
+            <img src="BASILE/maceterogrande.jpg" alt="foto macetero grande" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow Grande</p>
-            <p class="p-desc-prod">Macetero 60x20cm + Maceta de regalo</p>
+            <div class="precio-carrito">
+                <h5>$3500</h5>
+                <a href="#" class="carrito">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-cart-plus" viewBox="0 0 16 16">
+                        <path
+                            d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                        <path
+                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
         </div>
     </div>
 
     <div class="div-productos">
-        <h3 class="productos">Deco para baños</h3>
+        <h1>Deco para baños</h1>
         <div class="contenedor-prod li-hover li-trans">
-            <img src="../basile/alfombra.jpg" alt="foto alfombra" class="img-prod">
+            <img src="BASILE/alfombra.jpg" alt="foto alfombra" class="img-prod">
             <p class="p-titulo-prod">Alfombra/deck</p>
-            <p class="p-desc-prod">Alfombra/deck 30x50</p>
+            <div class="precio-carrito">
+                <h5>$1900</h5>
+                <a href="#" class="carrito">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-cart-plus" viewBox="0 0 16 16">
+                        <path
+                            d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                        <path
+                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
         </div>
         <div class="contenedor-prod li-hover li-trans">
-            <img src="basile/jabonera.jpg" alt="foto jabonera" class="img-prod">
+            <img src="BASILE/jabonera.jpg" alt="foto jabonera" class="img-prod">
             <p class="p-titulo-prod">Jabonera</p>
-            <p class="p-desc-prod">Jabonera 8x12</p>
+            <div class="precio-carrito">
+                <h5>$1500</h5>
+                <a href="#" class="carrito">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-cart-plus" viewBox="0 0 16 16">
+                        <path
+                            d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                        <path
+                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
         </div>
         <div class="contenedor-prod li-hover li-trans">
-            <img src="basile/crucedebañera.png" alt="foto cruce de bañera" class="img-prod">
+            <img src="BASILE/crucedebañera.png" alt="foto cruce de bañera" class="img-prod">
             <p class="p-titulo-prod">Cruce de bañera</p>
-            <p class="p-desc-prod">Cruce de bañera 60cm a 75cm</p>
+            <div class="precio-carrito">
+                <h5>$2700</h5>
+                <a href="#" class="carrito">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-cart-plus" viewBox="0 0 16 16">
+                        <path
+                            d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                        <path
+                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
         </div>
     </div>
 
     <div class="div-productos">
-        <h3 class="productos">Estantes flotantes</h3>
+        <h1>Estantes flotantes</h1>
         <div class="contenedor-prod li-hover li-trans">
-            <img src="basile/estantechico.jpg" alt="foto estante 20cm" class="img-prod">
+            <img src="BASILE/estantechico.jpg" alt="foto estante 20cm" class="img-prod">
             <p class="p-titulo-prod">Estante flotante 20cm</p>
+            <div class="precio-carrito">
+                <h5>$1400</h5>
+                <a href="#" class="carrito">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-cart-plus" viewBox="0 0 16 16">
+                        <path
+                            d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                        <path
+                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
         </div>
         <div class="contenedor-prod li-hover li-trans">
-            <img src="basile/estantemediano.jpg" alt="foto estante 25cm" class="img-prod">
+            <img src="BASILE/estantemediano.jpg" alt="foto estante 25cm" class="img-prod">
             <p class="p-titulo-prod">Estante flotante 25cm</p>
+            <div class="precio-carrito">
+                <h5>$1900</h5>
+                <a href="#" class="carrito">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-cart-plus" viewBox="0 0 16 16">
+                        <path
+                            d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                        <path
+                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
         </div>
         <div class="contenedor-prod li-hover li-trans">
-            <img src="basile/estantegrande.jpg" alt="foto estante 30cm" class="img-prod">
+            <img src="BASILE/estantegrande.jpg" alt="foto estante 30cm" class="img-prod">
             <p class="p-titulo-prod">Estante flotante 30cm</p>
+            <div class="precio-carrito">
+                <h5>$2300</h5>
+                <a href="#" class="carrito">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-cart-plus" viewBox="0 0 16 16">
+                        <path
+                            d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                        <path
+                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
         </div>
     </div>
 
     <div class="div-productos">
-        <h3 class="productos">Promociones</h3>
+        <h1>Promociones</h1>
         <div class="contenedor-prod li-hover li-trans">
-            <img src="basile/tresmaceteros.jpg" alt="foto set de maceteros" class="img-prod">
+            <img src="BASILE/tresmaceteros.jpg" alt="foto set de maceteros" class="img-prod">
             <p class="p-titulo-prod">Set Maceteros Snow x3</p>
             <p class="p-desc-prod">Macetero chico + Maceta</p>
             <p class="p-desc-prod">Macetero Mediano + Maceta</p>
             <p class="p-desc-prod">Macetero Grande + Maceta</p>
+            <div class="precio-carrito">
+                <h5>$4500</h5>
+                <a href="#" class="carrito">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-cart-plus" viewBox="0 0 16 16">
+                        <path
+                            d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                        <path
+                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
         </div>
         <div class="contenedor-prod li-hover li-trans">
-            <img src="basile/setproductos.jpg" alt="foto alfombra deck" class="img-prod">
-            <p class="p-titulo-prod">Set Alfombra/deck + Jabonera</p>
-            <p class="p-desc-prod">Alfombra/deck 30x50 + Jabonera 8x12</p>
+            <img src="BASILE/setdeck.png" alt="foto alfombra deck" class="img-prod">
+            <p class="p-titulo-prod">Set Alfombra/Deck + Jabonera</p>
+            <div class="precio-carrito">
+                <h5>$2500</h5>
+                <a href="#" class="carrito">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-cart-plus" viewBox="0 0 16 16">
+                        <path
+                            d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                        <path
+                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
         </div>
         <div class="contenedor-prod li-hover li-trans">
-            <img src="basile/estantechico.jpg" alt="Imagen estante flotante" class="img-prod">
+            <img src="BASILE/estantechico.jpg" alt="Imagen estante flotante" class="img-prod">
             <p class="p-titulo-prod">Set Estantes Flotantes</p>
             <p class="p-desc-prod">Estante flotante 25x60x3,5</p>
             <p class="p-desc-prod">Estante flotante 25x80x3,5</p>
             <p class="p-desc-prod">Estante flotante 25x100x3,5</p>
+            <div class="precio-carrito">
+                <h5>$4900</h5>
+                <a href="#" class="carrito">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
+                        class="bi bi-cart-plus" viewBox="0 0 16 16">
+                        <path
+                            d="M9 5.5a.5.5 0 0 0-1 0V7H6.5a.5.5 0 0 0 0 1H8v1.5a.5.5 0 0 0 1 0V8h1.5a.5.5 0 0 0 0-1H9V5.5z" />
+                        <path
+                            d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1H.5zm3.915 10L3.102 4h10.796l-1.313 7h-8.17zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z" />
+                    </svg>
+                </a>
+            </div>
         </div>
     </div>
+
 
     <footer class="pt-5 pb-4 mt-5">
         <div class="footer container text-md-left">
