solucione responsive de index

--- a/contacto.html
+++ b/contacto.html
@@ -50,7 +50,7 @@
 
 
 
-    <h1 class="productos">Envianos tus dudas!</h1>
+    <h1 class="titulo">Envianos tus dudas!</h1>
 
     <main class="container">
         <div class="row formulario contenedor-principal">
