--- a/index.html
+++ b/index.html
@@ -71,7 +71,28 @@
     </main>
 
 
-    <main class="main-cards">
+    <main class="container main-cards">
+        <div class="row div-card-index">
+            <h1 class="col-12 mx-auto titulo">Basile Wood & Deco</h1>
+            <div class="col-sm-12 col-md-6 col-lg-4 mx-auto card" data-aos="zoom-in-up">
+                <h2 class="titulo-card">Responsablidad y compromiso asegurado</h2>
+                <img src="BASILE/cardclientes.png" alt="clientes" class="img-card">
+                <h3 class="p-card">Nuestro principal objetivo es brindar el mejor servicio a los clientes</h3>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 mx-auto card" data-aos="zoom-in-up">
+                <h2 class="titulo-card">Envíos a todo el país</h2>
+                <img src="BASILE/cardenvios.png" alt="Envios" class="img-card">
+                <h3 class="p-card">Realizamos los envíos por correo argentino</h3>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-4 mx-auto card" data-aos="zoom-in-up">
+                <h2 class="titulo-card">Sitio seguro</h2>
+                <img src="BASILE/cardseguridad.png" alt="seguridad" class="img-card">
+                <h3 class="p-card">Protegemos tus datos</h3>
+            </div>
+        </div>
+    </main>
+
+    <!--<main class="main-cards">
         <div class="div-card-index">
             <h1>Basile Wood & Deco</h1>
             <div class="card" data-aos="zoom-in-up">
@@ -90,7 +111,8 @@
                 <h3 class="p-card">Protegemos tus datos</h3>
             </div>
         </div>
-    </main>
+    </main>-->
+
 
 
 
