--- a/productos.html
+++ b/productos.html
@@ -58,9 +58,8 @@
         </nav>
     </header>
 
-
+    <h1 class="titulo">Maceteros</h1>
     <div class="div-productos">
-        <h1>Maceteros</h1>
         <div class="contenedor-prod">
             <img src="BASILE/maceterochico.jpg" alt="foto macetero pequeño" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow Chico</p>
@@ -111,8 +110,8 @@
         </div>
     </div>
 
+    <h1 class="titulo">Deco para baños</h1>
     <div class="div-productos">
-        <h1>Deco para baños</h1>
         <div class="contenedor-prod li-hover li-trans">
             <img src="BASILE/alfombra.jpg" alt="foto alfombra" class="img-prod">
             <p class="p-titulo-prod">Alfombra/deck</p>
@@ -163,8 +162,8 @@
         </div>
     </div>
 
+    <h1 class="titulo">Estantes flotantes</h1>
     <div class="div-productos">
-        <h1>Estantes flotantes</h1>
         <div class="contenedor-prod li-hover li-trans">
             <img src="BASILE/estantechico.jpg" alt="foto estante 20cm" class="img-prod">
             <p class="p-titulo-prod">Estante flotante 20cm</p>
@@ -215,8 +214,8 @@
         </div>
     </div>
 
+    <h1 class="titulo">Promociones</h1>
     <div class="div-productos">
-        <h1>Promociones</h1>
         <div class="contenedor-prod li-hover li-trans">
             <img src="BASILE/tresmaceteros.jpg" alt="foto set de maceteros" class="img-prod">
             <p class="p-titulo-prod">Set Maceteros Snow x3</p>
