--- a/carrito.html
+++ b/carrito.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="basile/logobasilefavicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="BASILE/logobasilefavicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/feb0aa9a7d.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -49,7 +49,7 @@
     </header>
 
 
-    <h1>Tus productos</h1>
+    <h1 class="titulo">Tus productos</h1>
     <main class="container">
         <div class="row contenedor-principal">
             <div class="col-6 mx-auto mt-3 text-black text-center">
