--- a/nosotros.html
+++ b/nosotros.html
@@ -17,7 +17,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>nosotros</title>
+    <title>Nosotros | Elementos decorativos de madera para hogares</title>
 </head>
 
 <body>
@@ -88,7 +88,7 @@
             </div>
             <div class="col-lg-6 px-3 maps">
                 <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.0391508694315!2d-58.56119088483797!3d-34.65371418044652!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc7d94eb35311%3A0x1376ec3e6b84adc7!2sPringles%201465%2C%20B1704BOM%20Ramos%20Mej%C3%ADa%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1661964999934!5m2!1ses-419!2sar"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.0391508694315!2d-58.56119088483797!3d-34.65371418044652!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc7d94eb35311%3A0x1376ec3e6b84adc7!2sPringles%201465%2C%20B1704BOM%20Ramos%20Mej%C3%ADa%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1661964999934!5m2!1ses-419!2sar" title="mapa de basile, taller de elementos decorativos"
                     width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade" class="maps-basile">
                 </iframe>
