--- a/productos.html
+++ b/productos.html
@@ -23,14 +23,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Productos</title>
+    <title>Productos | Elementos decorativos de madera para hogares</title>
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile" class="header-logo"></a>
+                <a href="index.html" class="navbar-brand"><img src="BASILE/logobasile.jpg" alt="Logo Basile"
+                        class="header-logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -58,8 +59,10 @@
         </nav>
     </header>
 
-    <h1 class="titulo">Maceteros</h1>
+    <h1 class="titulo"> Nuestros productos</h1>
+
     <div class="div-productos">
+        <h2 class="titulo-productos">Maceteros</h2>
         <div class="contenedor-prod">
             <img src="BASILE/maceterochico.jpg" alt="foto macetero pequeño" class="img-prod">
             <p class="p-titulo-prod">Macetero Snow Chico</p>
@@ -110,8 +113,8 @@
         </div>
     </div>
 
-    <h1 class="titulo">Deco para baños</h1>
     <div class="div-productos">
+        <h2 class="titulo-productos">Deco para baños</h2>
         <div class="contenedor-prod li-hover li-trans">
             <img src="BASILE/alfombra.jpg" alt="foto alfombra" class="img-prod">
             <p class="p-titulo-prod">Alfombra/deck</p>
@@ -162,8 +165,8 @@
         </div>
     </div>
 
-    <h1 class="titulo">Estantes flotantes</h1>
     <div class="div-productos">
+        <h2 class="titulo-productos">Estantes flotantes</h2>
         <div class="contenedor-prod li-hover li-trans">
             <img src="BASILE/estantechico.jpg" alt="foto estante 20cm" class="img-prod">
             <p class="p-titulo-prod">Estante flotante 20cm</p>
@@ -214,8 +217,8 @@
         </div>
     </div>
 
-    <h1 class="titulo">Promociones</h1>
     <div class="div-productos">
+        <h2 class="titulo-productos">Promociones</h2>
         <div class="contenedor-prod li-hover li-trans">
             <img src="BASILE/tresmaceteros.jpg" alt="foto set de maceteros" class="img-prod">
             <p class="p-titulo-prod">Set Maceteros Snow x3</p>
