--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Basile</title>
+    <title>Basile Wood & Deco | Elementos decorativos de madera para hogares</title>
 </head>
 
 <body>
