modifique estilos generales y añadi extend

--- a/carrito.html
+++ b/carrito.html
@@ -50,7 +50,7 @@
 
 
     <h1 class="titulo">Tus productos</h1>
-    <main class="container">
+    <main class="container main-carrito">
         <div class="row contenedor-principal">
             <div class="col-6 mx-auto mt-3 text-black text-center">
                 <h6>Productos</h6>
